# ponzimon-program

./: .gitignore  Anchor.toml  HALVING_SCHEMA.md  README.md  RUN_SCRIPTS.txt  jest.config.ts  justfile  package.json  pnpm-lock.yaml
cli/: airdrop.ts  program.ts
programs/ponzimon/: Cargo.toml
programs/ponzimon/src/: constants.rs  errors.rs  helpers.rs  instructions.rs  lib.rs  state.rs
programs/weedminer/: Cargo.toml
programs/weedminer/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs
tests/: claim.test.ts  init.test.ts  reward.test.ts  staking-limit.test.ts  test-helpers.ts
